Project update one

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  <link rel="stylesheet" href="class.css"> 
   <head>
     <title> Трансформеры</title>
     <meta charset="utf-8">
@@ -18,13 +18,13 @@
     <br>
 
     <p> Они бывают двух видов: </p>
-    <h2>Автоботы: </h2>
+    <h2 class="car">Автоботы: </h2>
     <img src="img\bambl.jpg">
     <p><b>Тип:</b> Добрый </p>
     <p><b>Цель:</b> Помогать </p>
     <br>
 
-    <h2>Десептиконы</h2>
+    <h2 class="bad" >Десептиконы</h2>
     <img src="img\shokv.jpg">
     <p><b>Тип:</b> Злой </p>
     <p><b>Цель:</b> Всех убить </p>
