--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
     <br>
 
 
+    <h2>Люди</h2>
+    <p><b>Тип:</b> разные бывают </p>
+    <p><b>Цель:</b> Выжить </p>
+    <br>
   </body>
 </html>
